[package]
name = "Huskarl"
version = "0.1.0"
authors = ["Luis Ramos <luis@ramos.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = { git = "https://github.com/gfx-rs/wgpu-rs" }
winit = "0.23.0"
crossbeam-channel = "0.4"
futures = "0.3"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
notify = "5.0.0-pre.3"
